--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "node deploy.js"
+    "deploy": "node deploy.js",
+    "build_and_deploy": "react-scripts build && node deploy.js"
   },
   "eslintConfig": {
     "extends": "react-app"
